Fixed spurious scrollbars in the UI

--- a/html-src/public/css/email-preview.css
+++ b/html-src/public/css/email-preview.css
@@ -41,7 +41,7 @@
     display: flex;
     flex-direction: row;
     flex-grow: 1;
-    overflow: auto;
+    overflow: hidden;
 }
 .email-preview-stats {
     margin-bottom: 10px;
